# GleamEngine

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Mac-GenerateProjects.command  Mac-GenerateProjects.sh  README.md  Win-GenerateProjects.bat  imgui.ini  premake5.lua
CMake/: CMakeUtils.cmake  (+1 more)
Engine/Source/Editor/: CMakeLists.txt  GleamEditor.cpp
Engine/Source/Editor/src/: GleamEditor.cpp  SceneView.cpp  SceneView.h
Engine/Source/Editor/src/Assets/: AssetImporter.h  AssetType.h  FileType.h  Image.cpp  Image.h  MeshSource.cpp  MeshSource.h  Model.cpp  Model.h  ModelImporter.cpp  ModelImporter.h  TextureSource.cpp  TextureSource.h
Engine/Source/Editor/src/EAssets/: AssetBaker.h  AssetManager.cpp  AssetManager.h  AssetPackage.h  AssetRegistry.cpp  AssetRegistry.h  EAssetManager.cpp  EAssetManager.h  MaterialSource.cpp  MaterialSource.h  MeshSource.cpp  MeshSource.h  TextureSource.cpp  TextureSource.h
Engine/Source/Editor/src/EAssets/Bakers/: MaterialBaker.cpp  MaterialBaker.h  MeshBaker.cpp  MeshBaker.h  PrefabBaker.cpp  PrefabBaker.h  TextureBaker.cpp  TextureBaker.h
Engine/Source/Editor/src/ImGui/: ImGuiBackend.h  ImGuiRenderer.cpp  ImGuiRenderer.h  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h
Engine/Source/Editor/src/ImGui/DirectX/: ImGuiDirectX.cpp  imgui_impl_dx12.cpp
Engine/Source/Editor/src/ImGui/Metal/: ImGuiMetal.mm  imgui_impl_metal.mm
Engine/Source/Editor/src/ImGui/Vulkan/: ImGuiVulkan.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
Engine/Source/Editor/src/Renderers/: InfiniteGridRenderer.cpp  InfiniteGridRenderer.h  ShaderTypes.h
Engine/Source/Editor/src/Renderers/Shaders/: InfiniteGridShader.hlsl
Engine/Source/Editor/src/View/: View.h  ViewStack.cpp  ViewStack.h
Engine/Source/Editor/src/View/Events/: EntityEvent.h
Engine/Source/Editor/src/View/SceneView/: SceneView.cpp  SceneView.h  SceneViewController.cpp  SceneViewController.h
Engine/Source/Runtime/: CMakeLists.txt  Gleam.h  gpch.cpp  gpch.h
Engine/Source/Runtime/Container/: Pointer.h
Engine/Source/Runtime/Core/: Application.h  PlatformTargetDefines.h
Engine/Source/Runtime/Gleam/Core/: Application.cpp  Application.h
Engine/Source/Runtime/src/: Gleam.h  gpch.cpp  gpch.h
Engine/Source/Runtime/src/Assets/: Asset.h  AssetLibrary.cpp  AssetLibrary.h  AssetManager.cpp  AssetManager.h  AssetReference.h  ImageImporter.cpp  ImageImporter.h  Model.cpp  Model.h  ModelImporter.cpp  ModelImporter.h  TextureImporter.h
Engine/Source/Runtime/src/Container/: AnyArray.h  Array.h  Hash.h  List.h  Pointer.h  PolyArray.h  Queue.h  Stack.h  String.h  Tuple.h
Engine/Source/Runtime/src/Core/: Application.cpp  Application.h  ApplicationConfig.h  CommandLine.cpp  CommandLine.h  DebugLayer.cpp  DebugLayer.h  Engine.cpp  Engine.h  EngineConfig.h  EngineDefines.h  EntryPoint.h  EventSystem.cpp  EventSystem.h  GUID.cpp  GUID.h  Game.cpp  Game.h  Globals.h  Layer.cpp  Layer.h  Macro.h  PlatformTargetDefines.h  Project.h  SceneLayer.cpp  SceneLayer.h  Subsystem.h  System.h  Time.h  Timestep.h  Window.cpp  Window.h  WindowConfig.h  WindowSystem.cpp  WindowSystem.h
Engine/Source/Runtime/src/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  RendererEvent.h  WindowEvent.h
Engine/Source/Runtime/src/IO/: File.cpp  File.h  FileDialog.h  FileType.h  FileUtils.h  FileWatcher.h  Filesystem.cpp  Filesystem.h  IOUtils.h  Log.cpp  Log.h
Engine/Source/Runtime/src/IO/Apple/: FileDialog.mm  FileWatcher.mm  IOUtils.mm  PlatformIO_Apple.mm
Engine/Source/Runtime/src/IO/Windows/: FileDialog.cpp  FileWatcher.cpp  IOUtils.cpp
Engine/Source/Runtime/src/Input/: Input.cpp  Input.h  InputSystem.cpp  InputSystem.h  JoystickButton.h  KeyCode.h  MouseButton.h
Engine/Source/Runtime/src/Math/: BoundingBox.h  Color.h  Common.cpp  Common.h  Float2x2.h  Float3x3.h  Float4x4.h  Math.h  Matrix.h  Matrix2.h  Matrix3.h  Matrix4.h  MatrixTypes.h  Quaternion.h  Rect.h  Size.h  Transform.cpp  Transform.h  Types.h  Vector.h  Vector2.h  Vector3.h  Vector4.h  VectorTypes.h
Engine/Source/Runtime/src/Reflection/: Attribute.h  Database.cpp  Database.h  Macro.h  Meta.h  Primitives.h  Reflection.cpp  Reflection.h  TypeTraits.h
Engine/Source/Runtime/src/Renderer/: BlendState.h  Buffer.cpp  Buffer.h  BufferDescriptor.h  BufferInfo.h  Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  ConstantBuffer.cpp  ConstantBuffer.h  Context.h  DebugRenderer.cpp  DebugRenderer.h  ForwardPass.cpp  ForwardPass.h  ForwardRenderer.cpp  ForwardRenderer.h  GraphicsContext.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsObject.h  GraphicsTypes.h  Heap.h  HeapDescriptor.h  IndexType.h  Material.cpp  Material.h  MaterialInstance.cpp  MaterialInstance.h  MaterialProperty.h  Mesh.cpp  Mesh.h  MeshBuffer.cpp  MeshBuffer.h  MeshDescriptor.h  Model.cpp  Model.h  Pipeline.h  PipelineCache.cpp  (+41 more)
Engine/Source/Runtime/src/Renderer/Allocators/: PoolAllocator.cpp  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h
Engine/Source/Runtime/src/Renderer/DirectX/: DirectXCommandBuffer.cpp  DirectXDevice.cpp  DirectXDevice.h  DirectXHeap.cpp  DirectXPipelineStateManager.cpp  DirectXPipelineStateManager.h  DirectXShaderReflect.h  DirectXTransitionManager.cpp  DirectXTransitionManager.h  DirectXUploadManager.cpp  DirectXUtils.h  ImGuiDirectX.cpp
Engine/Source/Runtime/src/Renderer/ImGui/: ImGuiBackend.h  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h
Engine/Source/Runtime/src/Scene/: Component.h  GameObject.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/Source/Runtime/src/Serialization/: BinarySerializer.cpp  BinarySerializer.h  EntitySerializer.cpp  EntitySerializer.h  JSONInternal.h  JSONPrimitives.h  JSONSerializer.cpp  JSONSerializer.h
Engine/Source/Runtime/src/World/: ComponentSystem.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityReference.h  Prefab.cpp  Prefab.h  ScriptingSystem.cpp  ScriptingSystem.h  System.h  World.cpp  World.h  WorldConfig.h  WorldManager.cpp  WorldManager.h  WorldSubsystem.h
Engine/Source/UnitTest/: CMakeLists.txt
Engine/Source/UnitTest/src/: Main.cpp  MathTests.h
(+184 files in other folders)
